Bug 73010 - [chromium] MediaStream API: Missing WEBKIT_EXPORT in WebMediaStreamRegistry
Summary: [chromium] MediaStream API: Missing WEBKIT_EXPORT in WebMediaStreamRegistry
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Tommy Widenflycht
URL:
Keywords:
Depends on:
Blocks: 56459
  Show dependency treegraph
 
Reported: 2011-11-23 01:21 PST by Tommy Widenflycht
Modified: 2011-11-23 09:50 PST (History)
3 users (show)

See Also:


Attachments
Patch (1.30 KB, patch)
2011-11-23 01:25 PST, Tommy Widenflycht
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tommy Widenflycht 2011-11-23 01:21:03 PST
A missing WEBKIT_EXPORT in WebMediaStreamRegistry creates linker errors for component builds.
Comment 1 Tommy Widenflycht 2011-11-23 01:25:05 PST
Created attachment 116326 [details]
Patch
Comment 2 WebKit Review Bot 2011-11-23 01:27:21 PST
Please wait for approval from fishd@chromium.org before submitting because this patch contains changes to the Chromium public API.
Comment 3 Darin Fisher (:fishd, Google) 2011-11-23 08:37:40 PST
Comment on attachment 116326 [details]
Patch

Sorry for not catching this one!
Comment 4 WebKit Review Bot 2011-11-23 09:49:58 PST
Comment on attachment 116326 [details]
Patch

Clearing flags on attachment: 116326

Committed r101087: <http://trac.webkit.org/changeset/101087>
Comment 5 WebKit Review Bot 2011-11-23 09:50:03 PST
All reviewed patches have been landed.  Closing bug.