[chromium] MediaStream API: Missing WEBKIT_EXPORT in WebMediaStreamRegistry https://bugs.webkit.org/show_bug.cgi?id=73010

Patch by Tommy Widenflycht <tommyw@google.com> on 2011-11-23
Reviewed by Darin Fisher.

* public/WebMediaStreamRegistry.h:

Canonical link: https://commits.webkit.org/89570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101087 268f45cc-cd09-0410-ab3c-d52691b4dbfc